...

  @override
  Widget build(BuildContext context) {
    return MultiProvider(
      providers: [ChangeNotifierProvider(create: (_) => MapDataProvider())],
      child: MaterialApp(
        title: 'USA Representative Map',
      theme: ThemeData(
        brightness: Brightness.light,
        primarySwatch: Colors.blueGrey,
        scaffoldBackgroundColor: const Color(0xFFF5F5F7), // Apple-like grey
      ),
      localizationsDelegates: const [
...
