...
    return Scaffold(
      appBar: AppBar(
        title: Text(name),
        elevation: 0,
        actions: [
          IconButton(
            key: const Key('share_voter_card_button'),
            icon: const Icon(Icons.share),
            tooltip: "Share Voter Card",
            onPressed: _shareCard,
          ),
        ],
      ),
...
